@@ -7,11 +7,11 @@
 <div style="clear:both"></div>
 
 <% if @user.all_stickies.size > 0 %>
-  <%= draw_chart('highcharts', 'column', {'Not Completed' => @planned, 'Completed' => @completed}, "month_chart", {title: "#{@year} Stickies by Status", ytitle: 'Number of Stickies', width: '100%', height: 450}, ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]) %>
+  <%= draw_chart('highcharts', 'line', { 'Not Completed' => @planned, 'Completed' => @completed }, "month_chart", { title: "#{@year} Stickies by Status", ytitle: 'Number of Stickies', width: '100%', height: 450 }, ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]) %>
 
-  <%= draw_chart('highcharts', 'column', @favorite_projects_hash, "month_per_fav_project_chart", {title: "#{@year} Stickies Per Project - Favorites", ytitle: 'Number of Stickies', width: '100%', height: 450, stacking: 'normal'}, ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]) %>
+  <%= draw_chart('highcharts', 'line', @favorite_projects_hash, "month_per_fav_project_chart", { title: "#{@year} Stickies Per Project - Favorites", ytitle: 'Number of Stickies', width: '100%', height: 450 }, ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]) %>
 
-  <%= draw_chart('highcharts', 'column', @other_projects_hash, "month_per_other_project_chart", {title: "#{@year} Stickies Per Project - Other", ytitle: 'Number of Stickies', width: '100%', height: 450, stacking: 'normal'}, ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]) %>
+  <%= draw_chart('highcharts', 'line', @other_projects_hash, "month_per_other_project_chart", { title: "#{@year} Stickies Per Project - Other", ytitle: 'Number of Stickies', width: '100%', height: 450 }, ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]) %>
 <% else %>
   No Stickies
 <% end %>
