@@ -7,13 +7,13 @@
 <div style="clear:both"></div>
 
 <% if Sticky.current.size > 0 %>
-  <%= draw_chart('highcharts', 'column', @users_hash, "sticky_per_user", {title: "#{@year} Stickies Per User", ytitle: 'Number of Stickies', width: '100%', height: 450, stacking: 'normal'}, ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]) %>
+  <%= draw_chart('highcharts', 'line', @users_hash, "sticky_per_user", { title: "#{@year} Stickies Assigned to User", ytitle: 'Number of Stickies', width: '100%', height: 450 }, ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]) %>
 <% else %>
   No Stickies
 <% end %>
 
 <% if Comment.current.size > 0 %>
-  <%= draw_chart('highcharts', 'column', @users_comment_hash, "comment_per_user", {title: "#{@year} Comments Per User", ytitle: 'Number of Comments', width: '100%', height: 450, stacking: 'normal'}, ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]) %>
+  <%= draw_chart('highcharts', 'line', @users_comment_hash, "comment_per_user", { title: "#{@year} Comments By User", ytitle: 'Number of Comments', width: '100%', height: 450 }, ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]) %>
 <% else %>
   No Comments
 <% end %>
